--- a/advent_of_code_2019.ipynb
+++ b/advent_of_code_2019.ipynb
@@ -60,11 +60,11 @@
    "id": "7a77a86c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-20T18:12:35.670652Z",
-     "iopub.status.busy": "2022-12-20T18:12:35.670465Z",
-     "iopub.status.idle": "2022-12-20T18:12:35.782488Z",
-     "shell.execute_reply": "2022-12-20T18:12:35.781800Z",
-     "shell.execute_reply.started": "2022-12-20T18:12:35.670636Z"
+     "iopub.execute_input": "2022-12-28T07:21:03.904274Z",
+     "iopub.status.busy": "2022-12-28T07:21:03.903621Z",
+     "iopub.status.idle": "2022-12-28T07:21:04.015063Z",
+     "shell.execute_reply": "2022-12-28T07:21:04.014293Z",
+     "shell.execute_reply.started": "2022-12-28T07:21:03.904213Z"
     }
    },
    "outputs": [],
@@ -78,11 +78,11 @@
    "id": "80241d96",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-20T18:12:35.784326Z",
-     "iopub.status.busy": "2022-12-20T18:12:35.783711Z",
-     "iopub.status.idle": "2022-12-20T18:12:36.811896Z",
-     "shell.execute_reply": "2022-12-20T18:12:36.811243Z",
-     "shell.execute_reply.started": "2022-12-20T18:12:35.784270Z"
+     "iopub.execute_input": "2022-12-28T07:21:04.016390Z",
+     "iopub.status.busy": "2022-12-28T07:21:04.016190Z",
+     "iopub.status.idle": "2022-12-28T07:21:05.035982Z",
+     "shell.execute_reply": "2022-12-28T07:21:05.035346Z",
+     "shell.execute_reply.started": "2022-12-28T07:21:04.016375Z"
     }
    },
    "outputs": [],
@@ -96,11 +96,11 @@
    "id": "54c1f4ca",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-20T18:12:36.812730Z",
-     "iopub.status.busy": "2022-12-20T18:12:36.812597Z",
-     "iopub.status.idle": "2022-12-20T18:12:37.059499Z",
-     "shell.execute_reply": "2022-12-20T18:12:37.058861Z",
-     "shell.execute_reply.started": "2022-12-20T18:12:36.812717Z"
+     "iopub.execute_input": "2022-12-28T07:21:05.036832Z",
+     "iopub.status.busy": "2022-12-28T07:21:05.036697Z",
+     "iopub.status.idle": "2022-12-28T07:21:05.285062Z",
+     "shell.execute_reply": "2022-12-28T07:21:05.284541Z",
+     "shell.execute_reply.started": "2022-12-28T07:21:05.036820Z"
     }
    },
    "outputs": [],
@@ -136,11 +136,11 @@
    "id": "7d1bbb31",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-20T18:12:37.060620Z",
-     "iopub.status.busy": "2022-12-20T18:12:37.060227Z",
-     "iopub.status.idle": "2022-12-20T18:12:37.063755Z",
-     "shell.execute_reply": "2022-12-20T18:12:37.063271Z",
-     "shell.execute_reply.started": "2022-12-20T18:12:37.060603Z"
+     "iopub.execute_input": "2022-12-28T07:21:05.286504Z",
+     "iopub.status.busy": "2022-12-28T07:21:05.286162Z",
+     "iopub.status.idle": "2022-12-28T07:21:05.289495Z",
+     "shell.execute_reply": "2022-12-28T07:21:05.288999Z",
+     "shell.execute_reply.started": "2022-12-28T07:21:05.286487Z"
     }
    },
    "outputs": [],
@@ -155,11 +155,11 @@
    "id": "66841f79",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-20T18:12:37.064650Z",
-     "iopub.status.busy": "2022-12-20T18:12:37.064385Z",
-     "iopub.status.idle": "2022-12-20T18:12:37.076155Z",
-     "shell.execute_reply": "2022-12-20T18:12:37.075540Z",
-     "shell.execute_reply.started": "2022-12-20T18:12:37.064636Z"
+     "iopub.execute_input": "2022-12-28T07:21:05.290235Z",
+     "iopub.status.busy": "2022-12-28T07:21:05.290013Z",
+     "iopub.status.idle": "2022-12-28T07:21:05.301961Z",
+     "shell.execute_reply": "2022-12-28T07:21:05.301246Z",
+     "shell.execute_reply.started": "2022-12-28T07:21:05.290223Z"
     }
    },
    "outputs": [],
@@ -173,11 +173,11 @@
    "id": "63369420",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-20T18:12:37.077078Z",
-     "iopub.status.busy": "2022-12-20T18:12:37.076930Z",
-     "iopub.status.idle": "2022-12-20T18:12:37.085744Z",
-     "shell.execute_reply": "2022-12-20T18:12:37.085172Z",
-     "shell.execute_reply.started": "2022-12-20T18:12:37.077066Z"
+     "iopub.execute_input": "2022-12-28T07:21:05.302821Z",
+     "iopub.status.busy": "2022-12-28T07:21:05.302670Z",
+     "iopub.status.idle": "2022-12-28T07:21:05.311109Z",
+     "shell.execute_reply": "2022-12-28T07:21:05.310465Z",
+     "shell.execute_reply.started": "2022-12-28T07:21:05.302808Z"
     }
    },
    "outputs": [],
@@ -192,11 +192,11 @@
    "id": "f8dd3e61",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-20T18:12:37.088360Z",
-     "iopub.status.busy": "2022-12-20T18:12:37.087755Z",
-     "iopub.status.idle": "2022-12-20T18:12:37.098190Z",
-     "shell.execute_reply": "2022-12-20T18:12:37.097484Z",
-     "shell.execute_reply.started": "2022-12-20T18:12:37.088345Z"
+     "iopub.execute_input": "2022-12-28T07:21:05.311962Z",
+     "iopub.status.busy": "2022-12-28T07:21:05.311828Z",
+     "iopub.status.idle": "2022-12-28T07:21:05.323449Z",
+     "shell.execute_reply": "2022-12-28T07:21:05.322889Z",
+     "shell.execute_reply.started": "2022-12-28T07:21:05.311950Z"
     }
    },
    "outputs": [],
@@ -218,11 +218,11 @@
    "id": "8fc8ed4a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-20T18:12:37.099393Z",
-     "iopub.status.busy": "2022-12-20T18:12:37.099233Z",
-     "iopub.status.idle": "2022-12-20T18:12:37.105812Z",
-     "shell.execute_reply": "2022-12-20T18:12:37.105092Z",
-     "shell.execute_reply.started": "2022-12-20T18:12:37.099380Z"
+     "iopub.execute_input": "2022-12-28T07:21:05.324665Z",
+     "iopub.status.busy": "2022-12-28T07:21:05.324260Z",
+     "iopub.status.idle": "2022-12-28T07:21:05.333274Z",
+     "shell.execute_reply": "2022-12-28T07:21:05.332478Z",
+     "shell.execute_reply.started": "2022-12-28T07:21:05.324647Z"
     }
    },
    "outputs": [],
@@ -241,11 +241,11 @@
    "id": "61c1a5bc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-20T18:12:37.106822Z",
-     "iopub.status.busy": "2022-12-20T18:12:37.106537Z",
-     "iopub.status.idle": "2022-12-20T18:12:37.220702Z",
-     "shell.execute_reply": "2022-12-20T18:12:37.220120Z",
-     "shell.execute_reply.started": "2022-12-20T18:12:37.106809Z"
+     "iopub.execute_input": "2022-12-28T07:21:05.334297Z",
+     "iopub.status.busy": "2022-12-28T07:21:05.334026Z",
+     "iopub.status.idle": "2022-12-28T07:21:05.446044Z",
+     "shell.execute_reply": "2022-12-28T07:21:05.445494Z",
+     "shell.execute_reply.started": "2022-12-28T07:21:05.334283Z"
     }
    },
    "outputs": [],
@@ -265,11 +265,11 @@
    "id": "a70f78cc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-20T18:12:37.221669Z",
-     "iopub.status.busy": "2022-12-20T18:12:37.221437Z",
-     "iopub.status.idle": "2022-12-20T18:12:37.224756Z",
-     "shell.execute_reply": "2022-12-20T18:12:37.224156Z",
-     "shell.execute_reply.started": "2022-12-20T18:12:37.221655Z"
+     "iopub.execute_input": "2022-12-28T07:21:05.447580Z",
+     "iopub.status.busy": "2022-12-28T07:21:05.447372Z",
+     "iopub.status.idle": "2022-12-28T07:21:05.450204Z",
+     "shell.execute_reply": "2022-12-28T07:21:05.449712Z",
+     "shell.execute_reply.started": "2022-12-28T07:21:05.447568Z"
     }
    },
    "outputs": [],
@@ -283,11 +283,11 @@
    "id": "470f0b39",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-20T18:12:37.225662Z",
-     "iopub.status.busy": "2022-12-20T18:12:37.225396Z",
-     "iopub.status.idle": "2022-12-20T18:12:37.237923Z",
-     "shell.execute_reply": "2022-12-20T18:12:37.237314Z",
-     "shell.execute_reply.started": "2022-12-20T18:12:37.225649Z"
+     "iopub.execute_input": "2022-12-28T07:21:05.450984Z",
+     "iopub.status.busy": "2022-12-28T07:21:05.450854Z",
+     "iopub.status.idle": "2022-12-28T07:21:05.462772Z",
+     "shell.execute_reply": "2022-12-28T07:21:05.462225Z",
+     "shell.execute_reply.started": "2022-12-28T07:21:05.450973Z"
     },
     "tags": []
    },
@@ -323,11 +323,11 @@
    "id": "7a4faa60",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-20T18:12:37.238940Z",
-     "iopub.status.busy": "2022-12-20T18:12:37.238793Z",
-     "iopub.status.idle": "2022-12-20T18:12:37.244640Z",
-     "shell.execute_reply": "2022-12-20T18:12:37.244065Z",
-     "shell.execute_reply.started": "2022-12-20T18:12:37.238928Z"
+     "iopub.execute_input": "2022-12-28T07:21:05.463700Z",
+     "iopub.status.busy": "2022-12-28T07:21:05.463475Z",
+     "iopub.status.idle": "2022-12-28T07:21:05.469091Z",
+     "shell.execute_reply": "2022-12-28T07:21:05.468557Z",
+     "shell.execute_reply.started": "2022-12-28T07:21:05.463683Z"
     }
    },
    "outputs": [],
@@ -350,11 +350,11 @@
    "id": "4dde191f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-20T18:12:37.245634Z",
-     "iopub.status.busy": "2022-12-20T18:12:37.245321Z",
-     "iopub.status.idle": "2022-12-20T18:12:37.254447Z",
-     "shell.execute_reply": "2022-12-20T18:12:37.253831Z",
-     "shell.execute_reply.started": "2022-12-20T18:12:37.245622Z"
+     "iopub.execute_input": "2022-12-28T07:21:05.470058Z",
+     "iopub.status.busy": "2022-12-28T07:21:05.469790Z",
+     "iopub.status.idle": "2022-12-28T07:21:05.478275Z",
+     "shell.execute_reply": "2022-12-28T07:21:05.477706Z",
+     "shell.execute_reply.started": "2022-12-28T07:21:05.470043Z"
     },
     "lines_to_next_cell": 1
    },
@@ -391,11 +391,11 @@
    "id": "7ee73c61",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-20T18:12:37.255550Z",
-     "iopub.status.busy": "2022-12-20T18:12:37.255127Z",
-     "iopub.status.idle": "2022-12-20T18:12:37.265216Z",
-     "shell.execute_reply": "2022-12-20T18:12:37.264713Z",
-     "shell.execute_reply.started": "2022-12-20T18:12:37.255536Z"
+     "iopub.execute_input": "2022-12-28T07:21:05.479021Z",
+     "iopub.status.busy": "2022-12-28T07:21:05.478893Z",
+     "iopub.status.idle": "2022-12-28T07:21:05.489112Z",
+     "shell.execute_reply": "2022-12-28T07:21:05.488561Z",
+     "shell.execute_reply.started": "2022-12-28T07:21:05.479010Z"
     }
    },
    "outputs": [],
@@ -520,11 +520,11 @@
    "id": "98c73967",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-20T18:12:37.265995Z",
-     "iopub.status.busy": "2022-12-20T18:12:37.265848Z",
-     "iopub.status.idle": "2022-12-20T18:12:37.295767Z",
-     "shell.execute_reply": "2022-12-20T18:12:37.295152Z",
-     "shell.execute_reply.started": "2022-12-20T18:12:37.265982Z"
+     "iopub.execute_input": "2022-12-28T07:21:05.490113Z",
+     "iopub.status.busy": "2022-12-28T07:21:05.489858Z",
+     "iopub.status.idle": "2022-12-28T07:21:05.520624Z",
+     "shell.execute_reply": "2022-12-28T07:21:05.519955Z",
+     "shell.execute_reply.started": "2022-12-28T07:21:05.490098Z"
     }
    },
    "outputs": [],
@@ -622,11 +622,11 @@
    "id": "2d3182d0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-20T18:12:37.296897Z",
-     "iopub.status.busy": "2022-12-20T18:12:37.296450Z",
-     "iopub.status.idle": "2022-12-20T18:12:39.142708Z",
-     "shell.execute_reply": "2022-12-20T18:12:39.142062Z",
-     "shell.execute_reply.started": "2022-12-20T18:12:37.296881Z"
+     "iopub.execute_input": "2022-12-28T07:21:05.521470Z",
+     "iopub.status.busy": "2022-12-28T07:21:05.521331Z",
+     "iopub.status.idle": "2022-12-28T07:21:07.430029Z",
+     "shell.execute_reply": "2022-12-28T07:21:07.429463Z",
+     "shell.execute_reply.started": "2022-12-28T07:21:05.521458Z"
     }
    },
    "outputs": [],
@@ -656,11 +656,11 @@
    "id": "e676149e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-20T18:12:39.143931Z",
-     "iopub.status.busy": "2022-12-20T18:12:39.143606Z",
-     "iopub.status.idle": "2022-12-20T18:12:39.147607Z",
-     "shell.execute_reply": "2022-12-20T18:12:39.147124Z",
-     "shell.execute_reply.started": "2022-12-20T18:12:39.143919Z"
+     "iopub.execute_input": "2022-12-28T07:21:07.431185Z",
+     "iopub.status.busy": "2022-12-28T07:21:07.430966Z",
+     "iopub.status.idle": "2022-12-28T07:21:07.434982Z",
+     "shell.execute_reply": "2022-12-28T07:21:07.434435Z",
+     "shell.execute_reply.started": "2022-12-28T07:21:07.431171Z"
     },
     "tags": []
    },
@@ -2098,11 +2098,9 @@
     "  result2 = np.pad(result, 1)\n",
     "  media.show_image(result2, height=result2.shape[0] * 2)\n",
     "\n",
-    "  s = hh.string_from_grid(result, {0: '.', 1: '#'})\n",
-    "  answer = advent_of_code_ocr.convert_6(s)  # e.g. 'EHRUE'\n",
-    "  if 0:\n",
-    "    print(answer)\n",
-    "  return answer\n",
+    "  s2 = hh.string_from_grid(result, {0: '.', 1: '#'})\n",
+    "  hh.display_html(s2.replace('.', '⬜').replace('#', '⬛').replace('\\n', '<br/>'))\n",
+    "  return advent_of_code_ocr.convert_6(s2)  # e.g. 'EHRUE'\n",
     "\n",
     "\n",
     "puzzle.verify(1, day8)  # ~5 ms.\n",
@@ -2701,11 +2699,10 @@
     "    return painter.num_painted()\n",
     "\n",
     "  grid = painter.visualized_grid()\n",
-    "  s = hh.string_from_grid(grid, {0: '.', 1: '#'})\n",
-    "  answer = advent_of_code_ocr.convert_6(s)  # e.g. 'BLCZCJLZ'\n",
-    "  if 0 and not visualize_nth:\n",
-    "    print(answer)\n",
-    "  return answer\n",
+    "  s2 = hh.string_from_grid(grid, {0: '.', 1: '#'})\n",
+    "  if not visualize_nth:\n",
+    "    hh.display_html(s2.replace('.', '⬜').replace('#', '⬛').replace('\\n', '<br/>'))\n",
+    "  return advent_of_code_ocr.convert_6(s2)  # e.g. 'BLCZCJLZ'\n",
     "\n",
     "\n",
     "puzzle.verify(1, day11)  # ~50 ms with NumbaMachine; ~400 ms without.\n",
@@ -2782,15 +2779,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "id": "c09ee14a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-20T18:12:43.332811Z",
-     "iopub.status.busy": "2022-12-20T18:12:43.332370Z",
-     "iopub.status.idle": "2022-12-20T18:12:43.343065Z",
-     "shell.execute_reply": "2022-12-20T18:12:43.342412Z",
-     "shell.execute_reply.started": "2022-12-20T18:12:43.332796Z"
+     "iopub.execute_input": "2022-12-28T07:21:11.598665Z",
+     "iopub.status.busy": "2022-12-28T07:21:11.598282Z",
+     "iopub.status.idle": "2022-12-28T07:21:11.609104Z",
+     "shell.execute_reply": "2022-12-28T07:21:11.608583Z",
+     "shell.execute_reply.started": "2022-12-28T07:21:11.598649Z"
     },
     "tags": []
    },
@@ -2836,15 +2833,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "id": "50424f78",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-20T18:12:43.344505Z",
-     "iopub.status.busy": "2022-12-20T18:12:43.344097Z",
-     "iopub.status.idle": "2022-12-20T18:12:43.347392Z",
-     "shell.execute_reply": "2022-12-20T18:12:43.346806Z",
-     "shell.execute_reply.started": "2022-12-20T18:12:43.344486Z"
+     "iopub.execute_input": "2022-12-28T07:21:12.116225Z",
+     "iopub.status.busy": "2022-12-28T07:21:12.115833Z",
+     "iopub.status.idle": "2022-12-28T07:21:12.119290Z",
+     "shell.execute_reply": "2022-12-28T07:21:12.118687Z",
+     "shell.execute_reply.started": "2022-12-28T07:21:12.116209Z"
     },
     "tags": []
    },
@@ -2868,15 +2865,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "id": "b5c109e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-20T18:12:43.348391Z",
-     "iopub.status.busy": "2022-12-20T18:12:43.348102Z",
-     "iopub.status.idle": "2022-12-20T18:12:43.362830Z",
-     "shell.execute_reply": "2022-12-20T18:12:43.362287Z",
-     "shell.execute_reply.started": "2022-12-20T18:12:43.348380Z"
+     "iopub.execute_input": "2022-12-28T07:21:44.642060Z",
+     "iopub.status.busy": "2022-12-28T07:21:44.641666Z",
+     "iopub.status.idle": "2022-12-28T07:21:44.652765Z",
+     "shell.execute_reply": "2022-12-28T07:21:44.652140Z",
+     "shell.execute_reply.started": "2022-12-28T07:21:44.642043Z"
     },
     "tags": []
    },
@@ -2891,7 +2888,7 @@
    ],
    "source": [
     "def day12(s, *, num_steps=1000, verbose=False):\n",
-    "  position = np.array(re.findall(r'<x=(.*), y=(.*), z=(.*)>', s)).astype(np.int64)\n",
+    "  position = np.array(re.findall(r'<x=(.*), y=(.*), z=(.*)>', s), np.int64)\n",
     "  velocity = np.full_like(position, 0)\n",
     "\n",
     "  for step in range(num_steps):\n",
@@ -2931,15 +2928,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "id": "ef0ea9dc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-20T18:12:43.363537Z",
-     "iopub.status.busy": "2022-12-20T18:12:43.363408Z",
-     "iopub.status.idle": "2022-12-20T18:12:43.764746Z",
-     "shell.execute_reply": "2022-12-20T18:12:43.764136Z",
-     "shell.execute_reply.started": "2022-12-20T18:12:43.363526Z"
+     "iopub.execute_input": "2022-12-28T07:22:07.415779Z",
+     "iopub.status.busy": "2022-12-28T07:22:07.415237Z",
+     "iopub.status.idle": "2022-12-28T07:22:07.599276Z",
+     "shell.execute_reply": "2022-12-28T07:22:07.598698Z",
+     "shell.execute_reply.started": "2022-12-28T07:22:07.415764Z"
     },
     "tags": []
    },
@@ -2948,7 +2945,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Part 2: 0.019 s)\n"
+      "(Part 2: 0.020 s)\n"
      ]
     }
    ],
@@ -2989,7 +2986,7 @@
     "  if using_numba:\n",
     "    period_for_1d = day12_period_for_1d  # noqa\n",
     "\n",
-    "  initial_position = np.array(re.findall(r'<x=(.*), y=(.*), z=(.*)>', s)).astype(np.int64)\n",
+    "  initial_position = np.array(re.findall(r'<x=(.*), y=(.*), z=(.*)>', s), np.int64)\n",
     "  periods = [period_for_1d(initial_position[:, coord]) for coord in range(3)]\n",
     "  return np.lcm.reduce(periods)\n",
     "\n",
@@ -4842,7 +4839,8 @@
     "    grid[[y-1, y-1, y+1, y+1], [x-1, x+1, x-1, x+1]] = '@'\n",
     "  current_keys = tuple(str(i) for i in range(np.sum(grid == '@')))\n",
     "  grid[grid == '@'] = current_keys\n",
-    "  yx_of_key = {ch: yx for yx, ch in np.ndenumerate(grid) if is_key(ch)}\n",
+    "  yx_of_key: dict[str, tuple[int, int]] = {\n",
+    "      ch: yx for yx, ch in np.ndenumerate(grid) if is_key(ch)}  # type: ignore[misc]\n",
     "\n",
     "  @functools.lru_cache(maxsize=None)\n",
     "  def possible_paths(current_key):  # Returns {key: (distance, needed, path)}.\n",
@@ -6825,7 +6823,7 @@
     "    counts[:, :4] += grid[:, 1:]\n",
     "    counts[:, 1:] += grid[:, :4]\n",
     "    grid = ((counts == 1) | ((grid == 0) & (counts == 2))).astype(int)\n",
-    "    t = tuple(grid.reshape(-1))\n",
+    "    t = tuple(grid.flat)\n",
     "    if t in visited:\n",
     "      return sum(value * 2**i for i, value in enumerate(t))\n",
     "    visited.add(t)\n",
@@ -6865,13 +6863,13 @@
     "  grid[abs_level + 1] = hh.grid_from_string(s, {'.': 0, '#': 1})\n",
     "  counts = np.empty_like(grid)\n",
     "\n",
-    "  def flattened(grid):\n",
+    "  def make_image(grid):\n",
     "    grid = np.pad(grid.astype(bool), ((0, 0), (1, 1), (1, 1)))\n",
     "    shape = -1, math.isqrt(len(grid))\n",
     "    image = hh.assemble_arrays(grid, shape, round_to_even=True)\n",
     "    return image.repeat(3, axis=0).repeat(3, axis=1)\n",
     "\n",
-    "  images = [flattened(grid)]\n",
+    "  images = [make_image(grid)]\n",
     "  for _ in range(num_steps):\n",
     "    counts[:] = 0\n",
     "    counts[1:-1, :4, :] += grid[1:-1, 1:, :]\n",
@@ -6889,7 +6887,7 @@
     "    counts[:, 2, 2] = 0  # This absent center cell always remains inactive.\n",
     "    grid = (counts == 1) | ((grid == 0) & (counts == 2))\n",
     "    if visualize:\n",
-    "      images.append(flattened(grid))\n",
+    "      images.append(make_image(grid))\n",
     "\n",
     "  # print(grid.sum(axis=(1, 2)))  # Confirm that all levels are occupied.\n",
     "  if visualize:\n",
